--- a/src/auth/styles.css
+++ b/src/auth/styles.css
@@ -24,6 +24,14 @@
     border: none;
     box-sizing: border-box;
 }
+.form__textarea {
+    width: 300px;
+    height: 100px;
+    padding: 2px 6px;
+    border-radius: 6px;
+    border: none;
+    box-sizing: border-box;
+}
 
 .form__submit {
     width: 300px;
